<resources>
    <string name="app_name">kmx3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Текст для fragment_auth -->
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="forgot_your_password">Забыли пароль?</string>
    <string name="agreement">Выполняя вход в аккаунт вы соглашаетесь с Условиями и Политикой конфиденциальности</string>
    <string name="welcome">Добро пожаловать!</string>

    <!-- TODO: Текст для navigation_menu -->
    <string name="home">Главная</string>
    <string name="showcase">Витрина</string>
    <string name="message">Сообщения</string>
    <string name="favorites">Избранное</string>
    <string name="office">Офис</string>
    <string name="invitations">Приглашения</string>
    <string name="quotas">Квоты</string>

    <!-- TODO: Текст для fragment_showcase -->
    <string name="showcase_candidates">Витрина кандидатов</string>
    <string name="filter">Фильтр</string>
    <string name="dating_in_miel">Обучение в Миэль</string>
    <string name="achievements">Достижения</string>
    <string name="invitation_history">История приглашений</string>

    <!-- TODO: Текст для fragment_office -->
    <string name="administrator">Руководитель офиса</string>
    <string name="statistic">Статистика</string>
    <string name="statistic_quotas">Статистика квот</string>
    <string name="juridical_address">Адрес юридический</string>
    <string name="actual_address">Адрес фактический</string>
    <string name="email">Email</string>
    <string name="phone">Телефон</string>
    <string name="mobile_phone">Телефон мобильный</string>
    <string name="fio">ФИО</string>
    <string name="quotas_issued">Количество выданных квот за период</string>
    <string name="used_quotas">Количество использованных квот за период</string>
    <string name="invited">Количество приглашенных на собеседование за период</string>
    <string name="period">Период</string>
    <string name="variants">Выберите вариант из списка</string>

    <string name="request_quotas">Запросить квоты</string>

    <!-- TODO: Текст для fragment_filter -->
    <string name="filters">Фильтры</string>
    <string name="cancel">Отмена</string>
    <string name="age">Возраст</string>
    <string name="from">от</string>
    <string name="to">до</string>
    <string name="apply">Применить</string>
    <string name="courses_completed">Пройденные курсы</string>
</resources>