<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.office.statistics.StatisticsFragment">

    <TextView
        android:id="@+id/tv_statistics"
        style="@style/text_title"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/statistic_quotas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_request_quotas"
        android:layout_width="102dp"
        android:layout_height="26dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_border_for_button_bordo"
        android:fontFamily="@font/pt_sans_regular"
        android:stateListAnimator="@animator/anim_btn_invited"
        android:text="@string/request_quotas"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_statistics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_statistics"
        app:layout_constraintWidth_percent="0.4" />

    <Spinner
        android:id="@+id/spinner_period"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:prompt="@string/period"
        android:spinnerMode="dialog"
        android:textColor="@color/black"
        android:tooltipText="@string/variants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_statistics" />

    <View
        android:id="@+id/spinner_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_et_auth"
        app:layout_constraintBottom_toBottomOf="@id/spinner_period"
        app:layout_constraintEnd_toEndOf="@id/spinner_period"
        app:layout_constraintStart_toStartOf="@id/spinner_period"
        app:layout_constraintTop_toTopOf="@id/spinner_period" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/quotas_issued"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/quotas_issued"
        android:textColorHint="@color/text_hint"
        app:endIconTint="@color/icon_hint"
        app:layout_constraintEnd_toEndOf="@id/spinner_period"
        app:layout_constraintStart_toStartOf="@id/tv_statistics"
        app:layout_constraintTop_toBottomOf="@id/spinner_period">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_quotas_issued"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_1dp_height"
            android:focusable="false"
            android:inputType="text"
            android:paddingStart="0dp"
            android:paddingBottom="10dp"
            android:text="5"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/used_quotas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/used_quotas"
        android:textColorHint="@color/text_hint"
        app:endIconTint="@color/icon_hint"
        app:layout_constraintEnd_toEndOf="@id/spinner_period"
        app:layout_constraintStart_toStartOf="@id/tv_statistics"
        app:layout_constraintTop_toBottomOf="@id/quotas_issued">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_used_quotas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_1dp_height"
            android:focusable="false"
            android:inputType="text"
            android:paddingStart="0dp"
            android:paddingBottom="10dp"
            android:text="3"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/invited"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/invited"
        android:textColorHint="@color/text_hint"
        app:endIconTint="@color/icon_hint"
        app:layout_constraintEnd_toEndOf="@id/spinner_period"
        app:layout_constraintStart_toStartOf="@id/tv_statistics"
        app:layout_constraintTop_toBottomOf="@id/used_quotas">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_invited"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_1dp_height"
            android:focusable="false"
            android:inputType="text"
            android:paddingStart="0dp"
            android:paddingBottom="10dp"
            android:text="10"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>