<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.office.administrator.AdministratorFragment">

    <ImageView
        android:id="@+id/iv_arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:scaleX="-1"
        android:src="@drawable/ic_arrow_office"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_administrator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:textColor="@color/magenta"
        android:fontFamily="@font/pt_sans_regular"
        android:textSize="24sp"
        android:text="@string/administrator"
        app:layout_constraintTop_toTopOf="@id/iv_arrow_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/iv_arrow_back"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/fio"
        android:textColorHint="@color/text_hint"
        app:endIconTint="@color/icon_hint"
        app:layout_constraintEnd_toEndOf="@id/tv_administrator"
        app:layout_constraintStart_toStartOf="@id/iv_arrow_back"
        app:layout_constraintTop_toBottomOf="@id/iv_arrow_back">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_fio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:paddingStart="0dp"
            android:paddingBottom="10dp"
            android:textSize="18sp"
            android:text="Колесникова Мария Ивановна"
            android:background="@drawable/bg_1dp_height"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:textColorHint="@color/text_hint"
        app:endIconTint="@color/icon_hint"
        app:layout_constraintEnd_toEndOf="@id/tv_administrator"
        app:layout_constraintStart_toStartOf="@id/iv_arrow_back"
        app:layout_constraintTop_toBottomOf="@id/fio">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:paddingStart="0dp"
            android:paddingBottom="10dp"
            android:textSize="18sp"
            android:text="KolesnikovaMar@gmail.com"
            android:background="@drawable/bg_1dp_height"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobile_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/mobile_phone"
        android:textColorHint="@color/text_hint"
        app:endIconTint="@color/icon_hint"
        app:layout_constraintEnd_toEndOf="@id/tv_administrator"
        app:layout_constraintStart_toStartOf="@id/iv_arrow_back"
        app:layout_constraintTop_toBottomOf="@id/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_mobile_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:paddingStart="0dp"
            android:paddingBottom="10dp"
            android:textSize="18sp"
            android:text="+7 920 123 45 67"
            android:background="@drawable/bg_1dp_height"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>